examples/test/testpolicy8173.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8173
  namespace: namespace128
spec:
  podSelector:
    matchLabels:
      key12: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value25
          key17: value39
          key38: value30
      podSelector:
        matchLabels:
          key36: value6
